# wat

./: .gitignore  Cargo.toml  README.md  justfile
crates/wat-cli/: Cargo.toml
crates/wat-cli/src/: main.rs
crates/wat-cli/tests/: invocation.rs  pty_repl.rs
crates/wat-core/: Cargo.toml
crates/wat-core/src/: arith.rs  ast.rs  complete.rs  context.rs  env.rs  eval.rs  expand.rs  glob.rs  history.rs  io.rs  jobs.rs  lexer.rs  lib.rs  parser.rs  process.rs  pty.rs  shell.rs  vfs.rs
crates/wat-core/src/builtins/: easter.rs  jobs_builtins.rs  mod.rs  resolve.rs  test_cmd.rs
crates/wat-core/tests/: assign.rs  builtin_test.rs  builtins.rs  cancel_native.rs  cmdsub.rs  control_case.rs  control_if.rs  control_loops.rs  exec_native.rs  functions.rs  heredoc.rs  lexer.rs  param_expand.rs  parser.rs  pipelines.rs  pipes_native.rs  positional.rs  process_host.rs  prop_lexer.proptest-regressions  prop_lexer.rs  pty_native.rs  quoting.rs  script_builtins.rs  streaming.rs
crates/wat-core/tests/snapshots/: lexer__snap_and_or.snap  lexer__snap_backslash_space.snap  lexer__snap_chained_pipes.snap  lexer__snap_comment.snap  lexer__snap_dollar_preserved_in_double_quote.snap  lexer__snap_double_quoted.snap  lexer__snap_double_quoted_escape.snap  lexer__snap_echo_hello.snap  lexer__snap_empty.snap  lexer__snap_empty_double_quote.snap  lexer__snap_newline.snap  (+29 more)
crates/wat-wasm/: Cargo.toml
crates/wat-wasm/src/: lib.rs
crates/wat-wasm/tests/: wasm.rs
web/: index.html  package.json  vite.config.ts  zosite.json
web/src/: main.ts  shell-bridge.ts  styles.css  window-chrome.ts
