[package]
name = "wat-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wat"
path = "src/main.rs"

[dependencies]
wat-core = { path = "../wat-core", features = ["native-fs", "native-proc", "native-pty"] }
signal-hook = "0.3"
crossterm = "0.27"
is-terminal = "0.4"

[dev-dependencies]
portable-pty = "0.8"
